--- a/dongnebug/templates/profile_edit.html
+++ b/dongnebug/templates/profile_edit.html
@@ -2,26 +2,13 @@
 {% load static %}
 {% block head_block %}
     <title>동네북24</title>
-    <style media="screen">
-      #userimage{
-        text-align :center;
-      }
-      #currentID{
-        text-align : center;
-        font-size : large;
-        font-weight : bold;
-      }
-      #edit-bar{
-        font-family :'Nanum Gothic', sans-serif;
-        font-weight : bold;
-      }
-    </style>
+
 {% endblock %}
 {% block body_block %}
     <div id ="edit-bar"class="fixed-top">
       <nav class="navbar navbar-light" style="background-color: #D9EDFD;">
         <!-- Navbar content -->
-          <a href="homepage.html">
+          <a href="{% url 'dongnebug:index' %}">
             <button class=" mini teal ui button">취소</button>
           </a>
           <div id ="logo">
@@ -32,22 +19,22 @@
       </div>
 
 
-      <div id="text" style ="padding-top : 100px">
+      <div id="text" style ="padding-top : 100px; margin : 20px;">
         <div id ="userimage">
 
           <br/>
         <img src ="{% static 'img/user.png' %}" width ="60" height ="60" >
         </div>
         <br/>
-        <div id ="currentID">컴공의 누군가</div>
+        <div id ="currentID" style ="font-family :'Nanum Gothic', sans-serif; font-weight : bold;">컴공의 누군가</div>
         <br/>
         <hr>
         <br/>
         <div>
-          <div class="ui form">
+          <div class="ui form" style ="font-family :'Nanum Gothic', sans-serif; font-size : normal;">
             <div class="field">
-              <label>닉네임 변경</label>
-              <input type="text" placeholder="컴공의 누군가">
+              <label style ="">닉네임 변경</label>
+              <input type="text" placeholder="컴공의 누군가" style ="font-family: 'Nanum Gothic', sans-serif;">
             </div>
           </div>
 
