--- a/dongnebug/templates/uploadedbuk.html
+++ b/dongnebug/templates/uploadedbuk.html
@@ -1,11 +1,55 @@
 {% include "base.html" %}
 {% load static %}
+
 {% block head_block %}
 
     <title>uploaded buk</title>
 
 {% endblock %}
 <!-- 내용 입력 -->
+    <div class="fixed-top">
+    <nav class="navbar navbar-light" style="background-color: #D9EDFD;">
+      <!-- Navbar content -->
+      <a href="{% url 'dongnebug:index' %}"><img src = "{% static 'img/back.png' %}" width="30" height="30"></a>
+      <div id = logo>
+        <img src = "{% static 'img/buk.png' %}" width="30" height="30">
+        <a id ="logotext" class="navbar-brand" href="#" >올린 북</a>
+      </div>
+      <img id = "menu" src = "{% static 'img/menu.png' %}" width = "30" height = "30">
+
+    </nav>
+  </div>
+      <!-- side bar -->
+    <div class="ui right sidebar inverted vertical menu">
+      <a id = "sidebar-up" class="item">
+        <div id ="menu_up">MENU</div>
+      </a>
+      <a class ="item"><br/></a>
+      <a class="item">
+        <img id = "menu_user" src ="{% static 'img/user.png' %}" width = "60" height ="80">
+      </a>
+      <div id ="menu_username">컴공의 누군가<a href ="{% url 'dongnebug:update_profile' %}"><img id="menu_edit" src ="{% static 'img/edit.png' %}" width="15" height ="15"></a></div>
+      <a class = "item" >
+      <hr>
+      </a>
+      <a class = "item" href="{% url 'dongnebug:search' %}">
+        <div id ="menu_contents" style="font-weight : bold; font-size: small;color : #566573;"><img id="menu_edit" src ="{% static 'img/search.png' %}" width="20" height ="20">북 검색</div>
+      </a>
+      <a class = "item" href="{% url 'dongnebug:homepage' %}">
+        <div id ="menu_contents" style="font-weight : bold; font-size: small;color : #566573;"><img id="menu_edit" src ="{% static 'img/gpsbukcolor.png' %}" width="20" height ="20">주변 북</div>
+      </a>
+      <a class = "item" href="{% url 'dongnebug:uploadedbuk' %}">
+        <div id ="menu_contents" style="font-weight : bold; font-size: small;color : #566573;"><img id="menu_edit" src ="{% static 'img/buk.png' %}" width="20" height ="20">올린 북</div>
+      </a>
+      <a class = "item" href="{% url 'dongnebug:knockedbuk' %}">
+        <div id ="menu_contents" style="font-weight : bold; font-size: small;color : #566573;"><img id="menu_edit" src ="{% static 'img/bukk.png' %}" width="25" height ="23">두드린 북</div>
+      </a>
+      <a class = "item" href="{% url 'dongnebug:logout' %}">
+        <div id ="menu_contents" style="font-weight : bold; font-size: small;color : #566573;"><img id="menu_edit" src ="{% static 'img/logout.png' %}" width="20" height ="20">로그아웃</div>
+      </a>
+    </div>
+
+
     <div id = "upload_kknocked_contents"><!--테이블 -->
       <hr>
       <a href ="content.html">
@@ -47,6 +91,11 @@
       </a>
       <hr>
     </div>
+    <script>
+      $('#menu').click(function(){
+          $('.ui.sidebar').sidebar('setting', 'transition', 'overlay').sidebar('toggle');
+      })
+    </script>
 {% block body_block %}
 
 {% endblock %}
