--- a/static/dongnebug/css/buk.css
+++ b/static/dongnebug/css/buk.css
@@ -7,10 +7,6 @@ a:hover { color: black; text-decoration: none;}
   z-index: 1;
   background-color: #D9EDFD
 }
-
-#logo {
-  margin: auto;
-}
 #logotext {
   font-weight : bold;
   font-family : 'Nanum Gothic', sans-serif;
@@ -19,7 +15,7 @@ a:hover { color: black; text-decoration: none;}
   height: 100%;
 }
 #text {
-  margin : 40px;
+  margin :
   font-family :'Nanum Gothic', sans-serif;
 }
 #search{
@@ -97,7 +93,7 @@ a:hover { color: black; text-decoration: none;}
 
 
 #homepage-contents {
-  margin:20px;
+  margin:40px 20px 20px 20px;
   font-family :'Nanum Gothic', sans-serif;
 }
 #menu {
@@ -169,7 +165,8 @@ a:hover { color: black; text-decoration: none;}
   font-size: small;
 }
 #upload_kknocked_contents {
-  margin:40px;
+  margin:40px 20px 20px 20px;
+
 }
 #doong {
   float : right;
@@ -180,17 +177,22 @@ a:hover { color: black; text-decoration: none;}
   font-weight : bold;
   padding : 0px 0px 22px 0px;
 }
+#mainpage-logo{
+    margin : auto;
+    padding-left : 30px;
+}
 
-
-
+#mlogo{
+    margin : auto;
+}
 #main-contents{
-  margin:20px;
+  margin:70px 20px 20px 20px;
   font-family :'Nanum Gothic', sans-serif;
 }
 #main-text{
   text-align : center;
   font-weight : bold;
-  margin:20px;
+  margin: 20px ;
   font-family :'Nanum Gothic', sans-serif;
 }
 #main-icon{
@@ -225,3 +227,15 @@ a:hover { color: black; text-decoration: none;}
   text-align: center;
   padding-left: 20px;
 }
+#userimage{
+  text-align :center;
+}
+#currentID{
+  text-align : center;
+  font-size : large;
+  font-weight : bold;
+}
+edit-bar{
+     font-family :'Nanum Gothic', sans-serif;
+        font-weight : bold;
+      }
