--- a/dongnebug/templates/buk.css
+++ b/dongnebug/templates/buk.css
@@ -7,6 +7,10 @@ a:hover { color: black; text-decoration: none;}
   z-index: 1;
   background-color: #D9EDFD
 }
+
+#logo {
+  margin: auto;
+}
 #logotext {
   font-weight : bold;
   font-family : 'Nanum Gothic', sans-serif;
@@ -15,7 +19,7 @@ a:hover { color: black; text-decoration: none;}
   height: 100%;
 }
 #text {
-  margin :
+  margin : 40px;
   font-family :'Nanum Gothic', sans-serif;
 }
 #search{
@@ -93,7 +97,7 @@ a:hover { color: black; text-decoration: none;}
 
 
 #homepage-contents {
-  margin:40px 20px 20px 20px;
+  margin:20px;
   font-family :'Nanum Gothic', sans-serif;
 }
 #menu {
@@ -165,12 +169,7 @@ a:hover { color: black; text-decoration: none;}
   font-size: small;
 }
 #upload_kknocked_contents {
-<<<<<<< HEAD
-  margin:40px 20px 20px 20px;
-
-=======
   margin:20px;
->>>>>>> parent of 2d57a96... Merge branch 'Django_Server' of https://github.com/seleuchel/dongnebug24 into Django_Server
 }
 #doong {
   float : right;
@@ -181,22 +180,17 @@ a:hover { color: black; text-decoration: none;}
   font-weight : bold;
   padding : 0px 0px 22px 0px;
 }
-#mainpage-logo{
-    margin : auto;
-    padding-left : 30px;
-}
 
-#mlogo{
-    margin : auto;
-}
+
+
 #main-contents{
-  margin:70px 20px 20px 20px;
+  margin:20px;
   font-family :'Nanum Gothic', sans-serif;
 }
 #main-text{
   text-align : center;
   font-weight : bold;
-  margin: 20px ;
+  margin:20px;
   font-family :'Nanum Gothic', sans-serif;
 }
 #main-icon{
@@ -231,15 +225,3 @@ a:hover { color: black; text-decoration: none;}
   text-align: center;
   padding-left: 20px;
 }
-#userimage{
-  text-align :center;
-}
-#currentID{
-  text-align : center;
-  font-size : large;
-  font-weight : bold;
-}
-edit-bar{
-     font-family :'Nanum Gothic', sans-serif;
-        font-weight : bold;
-      }
