--- a/dongnebug/templates/complain_form.html
+++ b/dongnebug/templates/complain_form.html
@@ -20,7 +20,7 @@
 {% endblock %}
 
 {% block body_block %}
-    <form action="" method="post" enctype="multipart/form-data">
+    <form action="" method="post">
         {% csrf_token %}
         <div id = "text">
             {{ form.as_p }}
